--- a/src/com/rwlarsen/feedback/layout.fxml
+++ b/src/com/rwlarsen/feedback/layout.fxml
@@ -9,23 +9,24 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<SplitPane dividerPositions="0.10" orientation="VERTICAL" prefHeight="383.0" prefWidth="370.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <items>
-      <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <TableView fx:id="memberTable" editable="true" prefHeight="420.0" prefWidth="250.0">
+        <columns>
+          <TableColumn fx:id="nameCol" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Name" />
+          <TableColumn fx:id="activeCol" maxWidth="49.0" minWidth="49.0" prefWidth="49.0" text="Active" />
+            <TableColumn fx:id="presentCol" maxWidth="49.0" minWidth="49.0" prefWidth="49.0" text="Here" />
+            <TableColumn fx:id="clientCol" maxWidth="49.0" minWidth="49.0" prefWidth="49.0" text="Client" />
+        </columns>
+      </TableView>
+      <HBox prefHeight="30.0" prefWidth="200.0">
          <children>
-            <Button mnemonicParsing="false" text="Load Team" />
-            <Button mnemonicParsing="false" text="Save Team" />
-            <Button mnemonicParsing="false" text="Generate Pairs" />
+            <Button mnemonicParsing="false" onAction="#add" prefHeight="30.0" prefWidth="100.0" text="Add" />
+            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#run" prefHeight="30.0" prefWidth="100.0" text="Generate" />
+            <Button mnemonicParsing="false" onAction="#save" prefHeight="30.0" prefWidth="100.0" text="Save" />
          </children>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
       </HBox>
-      <SplitPane dividerPositions="0.5" prefHeight="200.0" prefWidth="200.0">
-         <items>
-            <ListView prefHeight="200.0" prefWidth="200.0" />
-            <ListView prefHeight="195.0" prefWidth="423.0" />
-         </items>
-      </SplitPane>
-   </items>
-</SplitPane>
+      <TextArea fx:id="textArea" editable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="300.0" />
+   </children>
+</VBox>
